# luatinkerE

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  README_english.md  autogen_export_lua.cpp  lua_tinker.cpp  lua_tinker.h  lua_tinker_overload_func.h  lua_tinker_stackobj.h  test.cpp  test.h  type_traits_ext.h
.travis/: build_lua.sh
luatinkere/: StaticTypeInfo.h  lua_tinker.cpp  lua_tinker.h  lua_tinker_stackobj.h  type_traits_ext.h
tests/: auto_export_lua.cpp  test.cpp  test.h  test_array.cpp  test_class_member.cpp  test_default_params.cpp  test_extend_class_in_lua.cpp  test_function_obj.cpp  test_function_overload.cpp  test_get_global.cpp  test_gloabl_function.cpp  test_inherit.cpp  test_inherit_in_lua.cpp  test_inner_class.cpp  test_int64.cpp  test_lua_function_ref.cpp  test_lua_table_ref.cpp  test_member_function.cpp  test_multireturn.cpp  test_namespace.cpp  test_operators.cpp  test_return_from_loadbuff.cpp  test_shared_ptr.cpp  test_stl_container.cpp  test_string.cpp
